--- a/attendance.html
+++ b/attendance.html
@@ -3,64 +3,63 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>نظام OMA - تقرير الحضور</title>
+<title>نظام OMA - الحضور والغياب</title>
 <style>
 body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:#f5f9ff;color:#102027;}
 header{background:#004aad;color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
 .wrap{max-width:1200px;margin:22px auto;padding:12px;}
 .card{background:#fff;border-radius:10px;padding:14px;margin-bottom:16px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
-select,input{padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;margin-bottom:8px;}
+input, select{padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;margin-bottom:8px;}
 label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
 .btn{background:#004aad;color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;}
 .btn.warn{background:#ff7043;}
 table{width:100%;border-collapse:collapse;margin-top:12px;}
 th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
 th{background:#004aad;color:#fff;}
+.flex{display:flex;gap:10px;flex-wrap:wrap;align-items:center;}
 @media print{
   body{background:white;}
-  header,.filters,.btn,.modal{display:none !important;}
+  header,.filters,.btn{display:none !important;}
   table{page-break-inside:avoid;}
 }
-.filters{display:flex;gap:10px;flex-wrap:wrap;margin-bottom:10px;}
-.filters select{width:auto;}
 </style>
 </head>
 <body>
-<header>نظام OMA - تقرير الحضور</header>
+<header>نظام OMA - الحضور والغياب</header>
 <div class="wrap">
 
-<div class="card filters">
-  <div style="flex:1">
-    <label>فلتر حسب الطالب</label>
-    <select id="filterStudent"><option value="">اختر الطالب</option></select>
+<!-- الفلاتر -->
+<div class="card filters" style="display:flex;gap:12px;flex-wrap:wrap;">
+  <div style="flex:1;min-width:150px;">
+    <label>اختر الكروب</label>
+    <select id="filterGroup">
+      <option value="">الكل</option>
+    </select>
   </div>
-  <div style="flex:1">
-    <label>فلتر حسب الأستاذ</label>
-    <select id="filterTeacher"><option value="">اختر الأستاذ</option></select>
+  <div style="flex:1;min-width:150px;">
+    <label>اختر الأستاذ</label>
+    <select id="filterTeacher">
+      <option value="">الكل</option>
+    </select>
   </div>
-  <div style="flex:1">
-    <label>فلتر حسب المادة</label>
-    <select id="filterSubject"><option value="">اختر المادة</option></select>
-  </div>
-  <div style="flex:1">
-    <label>فلتر حسب الكروب</label>
-    <input id="filterGroup" placeholder="أدخل الكروب">
+  <div style="flex:1;min-width:150px;align-self:flex-end;">
+    <button id="filterBtn" class="btn">تطبيق الفلاتر</button>
   </div>
 </div>
 
+<!-- زر الطباعة -->
+<button id="printBtn" class="btn" style="margin-bottom:10px;">🖨️ طباعة التقرير</button>
+
+<!-- جدول الحضور -->
 <div class="card">
-  <strong>تقرير الحضور</strong>
-  <table id="attendanceReport">
+  <table id="attendanceTable">
     <thead>
       <tr>
         <th>الطالب</th>
         <th>المادة</th>
         <th>الأستاذ</th>
         <th>الكروب</th>
-        <th>عدد الحصص</th>
-        <th>الحضور</th>
-        <th>الغياب</th>
-        <th>النسبة %</th>
+        <th>الحضور / الغياب</th>
       </tr>
     </thead>
     <tbody></tbody>
@@ -72,113 +71,97 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebas
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
+// 🔹 إعداد Firebase
 const firebaseConfig = {
-  apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
-  authDomain: "oma2-d36fa.firebaseapp.com",
-  projectId: "oma2-d36fa",
-  storageBucket: "oma2-d36fa.appspot.com",
-  messagingSenderId: "774171603105",
-  appId: "1:774171603105:web:91f2a5f44c4dde684080e0"
+  apiKey: "API_KEY_HERE",
+  authDomain: "PROJECT_ID.firebaseapp.com",
+  projectId: "PROJECT_ID",
+  storageBucket: "PROJECT_ID.appspot.com",
+  messagingSenderId: "SENDER_ID",
+  appId: "APP_ID"
 };
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-// عناصر الصفحة
-const filterStudent = document.getElementById("filterStudent");
-const filterTeacher = document.getElementById("filterTeacher");
-const filterSubject = document.getElementById("filterSubject");
-const filterGroup = document.getElementById("filterGroup");
-const attendanceReport = document.querySelector("#attendanceReport tbody");
-
-// التحقق من تسجيل الدخول
-onAuthStateChanged(auth,user=>{
-  if(!user){ window.location.href="login.html"; }
-  else{ document.body.style.visibility="visible"; loadFilters(); loadReport(); }
+onAuthStateChanged(auth,(user)=>{
+  if(!user) window.location.href="login.html";
+  else loadFiltersAndAttendance();
 });
 
-// تحميل الفلاتر
-async function loadFilters(){
-  const studentsSnap = await getDocs(collection(db,"students"));
+const attendanceTableBody = document.querySelector("#attendanceTable tbody");
+const filterGroup = document.getElementById("filterGroup");
+const filterTeacher = document.getElementById("filterTeacher");
+const filterBtn = document.getElementById("filterBtn");
+const printBtn = document.getElementById("printBtn");
+
+let studentsData=[], teachersData=[], classesData=[];
+
+// تحميل البيانات للفلاتر والجدول
+async function loadFiltersAndAttendance(){
+  // تحميل الأساتذة
   const teachersSnap = await getDocs(collection(db,"teachers"));
-  const classesSnap = await getDocs(collection(db,"classes"));
-
-  filterStudent.innerHTML="<option value=''>اختر الطالب</option>";
-  studentsSnap.forEach(s=>filterStudent.innerHTML+=`<option value="${s.id}">${s.data().name}</option>`);
-
-  filterTeacher.innerHTML="<option value=''>اختر الأستاذ</option>";
-  teachersSnap.forEach(t=>filterTeacher.innerHTML+=`<option value="${t.id}">${t.data().name}</option>`);
-
-  const subjectsSet = new Set();
-  classesSnap.forEach(c=>c.data().students.forEach(s=>c.data().subject && subjectsSet.add(c.data().subject)));
-  filterSubject.innerHTML="<option value=''>اختر المادة</option>";
-  subjectsSet.forEach(s=>filterSubject.innerHTML+=`<option value="${s}">${s}</option>`);
-}
-
-// تحميل التقرير
-async function loadReport(){
-  const classesSnap = await getDocs(collection(db,"classes"));
-  const studentsSnap = await getDocs(collection(db,"students"));
-  const studentsMap = {};
-  studentsSnap.forEach(s=>studentsMap[s.id]=s.data().name);
-
-  attendanceReport.innerHTML="";
-  const reportData = {};
-
-  classesSnap.forEach(cSnap=>{
-    const cls = cSnap.data();
-    const clsId = cSnap.id;
-    const clsTeacher = cls.teacher;
-    const clsSubject = cls.subject;
-    const clsGroup = cls.group;
-
-    cls.students.forEach(st=>{
-      const studentId = st.id;
-      if(filterStudent.value && filterStudent.value!==studentId) return;
-      if(filterTeacher.value && filterTeacher.value!==clsTeacher) return;
-      if(filterSubject.value && filterSubject.value!==clsSubject) return;
-      if(filterGroup.value && !clsGroup.includes(filterGroup.value)) return;
-
-      if(!reportData[studentId]) reportData[studentId]={};
-      const key = clsSubject+"_"+clsTeacher+"_"+clsGroup;
-      if(!reportData[studentId][key]) reportData[studentId][key]={total:0,present:0};
-      reportData[studentId][key].total++;
-      const attendanceRecord = cls.attendance?.find(a=>a.studentId===studentId);
-      if(attendanceRecord?.present) reportData[studentId][key].present++;
-    });
+  teachersData = [];
+  filterTeacher.innerHTML="<option value=''>الكل</option>";
+  teachersSnap.forEach(snap=>{
+    const t = {...snap.data(),id:snap.id};
+    teachersData.push(t);
+    filterTeacher.innerHTML+=`<option value="${t.id}">${t.name}</option>`;
   });
 
-  Object.keys(reportData).forEach(studentId=>{
-    const studentName = studentsMap[studentId] || "غير معروف";
-    Object.keys(reportData[studentId]).forEach(key=>{
-      const [subject,teacher,group] = key.split("_");
-      const data = reportData[studentId][key];
-      const absent = data.total - data.present;
-      const percent = Math.round((data.present/data.total)*100);
+  // تحميل الطلاب
+  const studentsSnap = await getDocs(collection(db,"students"));
+  studentsData = [];
+  const groupsSet = new Set();
+  studentsSnap.forEach(snap=>{
+    const s = {...snap.data(),id:snap.id};
+    studentsData.push(s);
+    if(s.group) groupsSet.add(s.group);
+  });
+  filterGroup.innerHTML="<option value=''>الكل</option>";
+  groupsSet.forEach(g=>{filterGroup.innerHTML+=`<option value="${g}">${g}</option>`;});
+
+  // تحميل الحصص
+  const classesSnap = await getDocs(collection(db,"classes"));
+  classesData = [];
+  classesSnap.forEach(snap=>{
+    const c = {...snap.data(),id:snap.id};
+    classesData.push(c);
+  });
+
+  renderAttendance();
+}
+
+// عرض البيانات
+function renderAttendance(groupFilter="", teacherFilter=""){
+  attendanceTableBody.innerHTML="";
+  classesData.forEach(cls=>{
+    if(groupFilter && cls.group !== groupFilter) return;
+    if(teacherFilter && cls.teacherId !== teacherFilter) return;
+    cls.students.forEach(s=>{
+      const teacher = teachersData.find(t=>t.id===cls.teacherId);
+      const teacherName = teacher ? teacher.name : "-";
       const tr = document.createElement("tr");
       tr.innerHTML=`
-        <td>${studentName}</td>
-        <td>${subject}</td>
-        <td>${teacher}</td>
-        <td>${group}</td>
-        <td>${data.total}</td>
-        <td>${data.present}</td>
-        <td>${absent}</td>
-        <td>${percent}%</td>
+        <td>${s.name}</td>
+        <td>${cls.subject}</td>
+        <td>${teacherName}</td>
+        <td>${cls.group}</td>
+        <td>${s.attendance?"حاضر":"غائب"}</td>
       `;
-      attendanceReport.appendChild(tr);
+      attendanceTableBody.appendChild(tr);
     });
   });
 }
 
 // تطبيق الفلاتر
-filterStudent.addEventListener("change", loadReport);
-filterTeacher.addEventListener("change", loadReport);
-filterSubject.addEventListener("change", loadReport);
-filterGroup.addEventListener("input", loadReport);
+filterBtn.addEventListener("click", ()=>{
+  renderAttendance(filterGroup.value, filterTeacher.value);
+});
 
+// زر الطباعة
+printBtn.addEventListener("click", ()=>window.print());
 </script>
-</div>
 </body>
 </html>
