--- a/attendance.html
+++ b/attendance.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>نظام OMA - الحضور والغياب</title>
+<title>نظام OMA - إدارة الحصص</title>
 <style>
-body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:#f5f9ff;color:#102027;}
+body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:#f5f9ff;color:#102027;visibility:hidden;}
 header{background:#004aad;color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
 .wrap{max-width:1200px;margin:22px auto;padding:12px;}
 .card{background:#fff;border-radius:10px;padding:14px;margin-bottom:16px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
@@ -13,10 +13,10 @@ input, select{padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:
 label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
 .btn{background:#004aad;color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;}
 .btn.warn{background:#ff7043;}
+.filters{display:flex;gap:8px;flex-wrap:wrap;margin-bottom:12px;}
 table{width:100%;border-collapse:collapse;margin-top:12px;}
 th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
 th{background:#004aad;color:#fff;}
-.flex{display:flex;gap:10px;flex-wrap:wrap;align-items:center;}
 @media print{
   body{background:white;}
   header,.filters,.btn{display:none !important;}
@@ -25,41 +25,53 @@ th{background:#004aad;color:#fff;}
 </style>
 </head>
 <body>
-<header>نظام OMA - الحضور والغياب</header>
+<header>نظام OMA - إدارة الحصص</header>
 <div class="wrap">
 
-<!-- الفلاتر -->
-<div class="card filters" style="display:flex;gap:12px;flex-wrap:wrap;">
-  <div style="flex:1;min-width:150px;">
-    <label>اختر الكروب</label>
-    <select id="filterGroup">
-      <option value="">الكل</option>
+<!-- نموذج إضافة حصة -->
+<div class="card">
+  <strong>أضف حصة جديدة</strong>
+  <form id="classForm">
+    <label>المادة</label>
+    <select id="subjectSelect" required></select>
+    <label>الأستاذ</label>
+    <select id="teacherSelect" required></select>
+    <label>المجموعة / الكروب</label>
+    <input id="groupInput" type="text" placeholder="مثال: A أو 101" required>
+    <label>اليوم</label>
+    <select id="daySelect" required>
+      <option value="الاثنين">الاثنين</option>
+      <option value="الثلاثاء">الثلاثاء</option>
+      <option value="الأربعاء">الأربعاء</option>
+      <option value="الخميس">الخميس</option>
+      <option value="الجمعة">الجمعة</option>
     </select>
-  </div>
-  <div style="flex:1;min-width:150px;">
-    <label>اختر الأستاذ</label>
-    <select id="filterTeacher">
-      <option value="">الكل</option>
-    </select>
-  </div>
-  <div style="flex:1;min-width:150px;align-self:flex-end;">
-    <button id="filterBtn" class="btn">تطبيق الفلاتر</button>
-  </div>
+    <label>الوقت</label>
+    <input id="timeInput" type="time" required>
+    <button type="submit" class="btn">✅ حفظ الحصة</button>
+  </form>
 </div>
 
-<!-- زر الطباعة -->
-<button id="printBtn" class="btn" style="margin-bottom:10px;">🖨️ طباعة التقرير</button>
+<!-- فلاتر الطباعة -->
+<div class="filters">
+  <select id="filterSubject"><option value="">جميع المواد</option></select>
+  <select id="filterTeacher"><option value="">جميع الأساتذة</option></select>
+  <input type="text" id="filterGroup" placeholder="فلتر حسب الكروب">
+  <button class="btn" id="printBtn">🖨️ طباعة</button>
+</div>
 
-<!-- جدول الحضور -->
+<!-- جدول الحصص -->
 <div class="card">
-  <table id="attendanceTable">
+  <strong>قائمة الحصص</strong>
+  <table id="classesTable">
     <thead>
       <tr>
-        <th>الطالب</th>
         <th>المادة</th>
         <th>الأستاذ</th>
-        <th>الكروب</th>
-        <th>الحضور / الغياب</th>
+        <th>المجموعة</th>
+        <th>اليوم</th>
+        <th>الوقت</th>
+        <th>خيارات</th>
       </tr>
     </thead>
     <tbody></tbody>
@@ -69,99 +81,145 @@ th{background:#004aad;color:#fff;}
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-// 🔹 إعداد Firebase
+// إعداد Firebase
 const firebaseConfig = {
-  apiKey: "API_KEY_HERE",
-  authDomain: "PROJECT_ID.firebaseapp.com",
-  projectId: "PROJECT_ID",
-  storageBucket: "PROJECT_ID.appspot.com",
-  messagingSenderId: "SENDER_ID",
-  appId: "APP_ID"
+  apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
+  authDomain: "oma2-d36fa.firebaseapp.com",
+  projectId: "oma2-d36fa",
+  storageBucket: "oma2-d36fa.appspot.com",
+  messagingSenderId: "774171603105",
+  appId: "1:774171603105:web:91f2a5f44c4dde684080e0"
 };
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-onAuthStateChanged(auth,(user)=>{
-  if(!user) window.location.href="login.html";
-  else loadFiltersAndAttendance();
+// التحقق من تسجيل الدخول
+onAuthStateChanged(auth, user => {
+  if (!user) window.location.href="login.html";
+  else {
+    document.body.style.visibility="visible";
+    loadSubjectsAndTeachers();
+    loadClasses();
+  }
 });
 
-const attendanceTableBody = document.querySelector("#attendanceTable tbody");
-const filterGroup = document.getElementById("filterGroup");
+// العناصر
+const classForm = document.getElementById("classForm");
+const subjectSelect = document.getElementById("subjectSelect");
+const teacherSelect = document.getElementById("teacherSelect");
+const classesTableBody = document.querySelector("#classesTable tbody");
+const filterSubject = document.getElementById("filterSubject");
 const filterTeacher = document.getElementById("filterTeacher");
-const filterBtn = document.getElementById("filterBtn");
+const filterGroup = document.getElementById("filterGroup");
 const printBtn = document.getElementById("printBtn");
 
-let studentsData=[], teachersData=[], classesData=[];
-
-// تحميل البيانات للفلاتر والجدول
-async function loadFiltersAndAttendance(){
-  // تحميل الأساتذة
-  const teachersSnap = await getDocs(collection(db,"teachers"));
-  teachersData = [];
-  filterTeacher.innerHTML="<option value=''>الكل</option>";
-  teachersSnap.forEach(snap=>{
-    const t = {...snap.data(),id:snap.id};
-    teachersData.push(t);
-    filterTeacher.innerHTML+=`<option value="${t.id}">${t.name}</option>`;
-  });
-
-  // تحميل الطلاب
+// تحميل المواد والأساتذة
+async function loadSubjectsAndTeachers(){
+  // المواد من الطلاب
   const studentsSnap = await getDocs(collection(db,"students"));
-  studentsData = [];
-  const groupsSet = new Set();
+  const subjectsSet = new Set();
   studentsSnap.forEach(snap=>{
-    const s = {...snap.data(),id:snap.id};
-    studentsData.push(s);
-    if(s.group) groupsSet.add(s.group);
+    snap.data().subjects.forEach(sub=>subjectsSet.add(sub.name));
   });
-  filterGroup.innerHTML="<option value=''>الكل</option>";
-  groupsSet.forEach(g=>{filterGroup.innerHTML+=`<option value="${g}">${g}</option>`;});
-
-  // تحميل الحصص
-  const classesSnap = await getDocs(collection(db,"classes"));
-  classesData = [];
-  classesSnap.forEach(snap=>{
-    const c = {...snap.data(),id:snap.id};
-    classesData.push(c);
+  subjectSelect.innerHTML="<option value=''>اختر المادة</option>";
+  filterSubject.innerHTML="<option value=''>جميع المواد</option>";
+  subjectsSet.forEach(sub=>{
+    subjectSelect.innerHTML+=`<option value="${sub}">${sub}</option>`;
+    filterSubject.innerHTML+=`<option value="${sub}">${sub}</option>`;
   });
 
-  renderAttendance();
-}
-
-// عرض البيانات
-function renderAttendance(groupFilter="", teacherFilter=""){
-  attendanceTableBody.innerHTML="";
-  classesData.forEach(cls=>{
-    if(groupFilter && cls.group !== groupFilter) return;
-    if(teacherFilter && cls.teacherId !== teacherFilter) return;
-    cls.students.forEach(s=>{
-      const teacher = teachersData.find(t=>t.id===cls.teacherId);
-      const teacherName = teacher ? teacher.name : "-";
-      const tr = document.createElement("tr");
-      tr.innerHTML=`
-        <td>${s.name}</td>
-        <td>${cls.subject}</td>
-        <td>${teacherName}</td>
-        <td>${cls.group}</td>
-        <td>${s.attendance?"حاضر":"غائب"}</td>
-      `;
-      attendanceTableBody.appendChild(tr);
-    });
+  // الأساتذة
+  const teachersSnap = await getDocs(collection(db,"teachers"));
+  teacherSelect.innerHTML="<option value=''>اختر الأستاذ</option>";
+  filterTeacher.innerHTML="<option value=''>جميع الأساتذة</option>";
+  teachersSnap.forEach(snap=>{
+    const t = snap.data();
+    teacherSelect.innerHTML+=`<option value="${snap.id}">${t.name}</option>`;
+    filterTeacher.innerHTML+=`<option value="${snap.id}">${t.name}</option>`;
   });
 }
 
-// تطبيق الفلاتر
-filterBtn.addEventListener("click", ()=>{
-  renderAttendance(filterGroup.value, filterTeacher.value);
+// حفظ الحصة
+classForm.addEventListener("submit", async e=>{
+  e.preventDefault();
+  const subject = subjectSelect.value;
+  const teacherId = teacherSelect.value;
+  const teacherName = teacherSelect.options[teacherSelect.selectedIndex].text;
+  const group = document.getElementById("groupInput").value.trim();
+  const day = document.getElementById("daySelect").value;
+  const time = document.getElementById("timeInput").value;
+
+  // جلب الطلاب من نفس الكروب
+  const studentsSnap = await getDocs(collection(db,"students"));
+  const groupStudents = [];
+  studentsSnap.forEach(snap=>{
+    const s = snap.data();
+    if(s.group===group){
+      groupStudents.push({id:snap.id,name:s.name});
+    }
+  });
+
+  await addDoc(collection(db,"classes"),{
+    subject,
+    teacherId,
+    teacherName,
+    group,
+    day,
+    time,
+    students:groupStudents,
+    attendance:[]
+  });
+  alert("تم حفظ الحصة بنجاح");
+  classForm.reset();
+  loadClasses();
 });
 
-// زر الطباعة
-printBtn.addEventListener("click", ()=>window.print());
+// تحميل الحصص
+async function loadClasses(){
+  const snapshot = await getDocs(collection(db,"classes"));
+  classesTableBody.innerHTML="";
+  snapshot.forEach(docSnap=>{
+    const cls = {...docSnap.data(),id:docSnap.id};
+
+    // تطبيق الفلاتر
+    if(filterSubject.value && cls.subject!==filterSubject.value) return;
+    if(filterTeacher.value && cls.teacherId!==filterTeacher.value) return;
+    if(filterGroup.value && !cls.group.includes(filterGroup.value)) return;
+
+    const tr = document.createElement("tr");
+    tr.innerHTML=`
+      <td>${cls.subject}</td>
+      <td>${cls.teacherName}</td>
+      <td>${cls.group}</td>
+      <td>${cls.day}</td>
+      <td>${cls.time}</td>
+      <td>
+        <button class="btn warn" onclick="deleteClass('${cls.id}')">🗑️ حذف</button>
+      </td>
+    `;
+    classesTableBody.appendChild(tr);
+  });
+}
+
+// حذف حصة
+window.deleteClass = async id=>{
+  if(confirm("هل تريد حذف الحصة؟")){
+    await deleteDoc(doc(db,"classes",id));
+    loadClasses();
+  }
+}
+
+// فلاتر
+filterSubject.addEventListener("change", loadClasses);
+filterTeacher.addEventListener("change", loadClasses);
+filterGroup.addEventListener("input", loadClasses);
+
+// طباعة
+printBtn.addEventListener("click", ()=>{window.print();});
 </script>
 </body>
 </html>
