--- a/attendance.html
+++ b/attendance.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>نظام OMA - الحضور والغياب</title>
+<title>نظام OMA - إدارة الحصص</title>
 <style>
-body{font-family:'Cairo',sans-serif;margin:0;background:#f5f9ff;color:#102027;direction:rtl;visibility:hidden;}
+body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:#f5f9ff;color:#102027;}
 header{background:#004aad;color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
 .wrap{max-width:1200px;margin:22px auto;padding:12px;}
 .card{background:#fff;border-radius:10px;padding:14px;margin-bottom:16px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
@@ -16,40 +16,70 @@ label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
 table{width:100%;border-collapse:collapse;margin-top:12px;}
 th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
 th{background:#004aad;color:#fff;}
+.filters{display:flex;flex-wrap:wrap;gap:10px;margin-bottom:10px;align-items:center;}
 @media print{
   body{background:white;}
-  header,.filters,.actions,.btn{display:none !important;}
+  header,.filters,.btn{display:none !important;}
   table{page-break-inside:avoid;}
 }
 </style>
 </head>
 <body>
-<header>نظام OMA - الحضور والغياب</header>
+<header>نظام OMA - إدارة الحصص</header>
 <div class="wrap">
 
-<!-- فلاتر -->
-<div class="card filters">
-  <strong>فلترة الحضور</strong>
-  <div style="display:flex;flex-wrap:wrap;gap:12px;margin-top:8px">
-    <select id="filterSubject"><option value="">اختر المادة</option></select>
-    <select id="filterTeacher"><option value="">اختر الأستاذ</option></select>
-    <input id="filterGroup" type="text" placeholder="المجموعة / الكروب">
-    <select id="filterDay">
-      <option value="">اختر اليوم</option>
+<!-- نموذج إضافة حصة -->
+<div class="card">
+  <strong>أضف حصة جديدة</strong>
+  <form id="classForm">
+    <label>المادة</label>
+    <select id="subjectSelect" required></select>
+    <label>الأستاذ</label>
+    <select id="teacherSelect" required></select>
+    <label>المجموعة / الكروب</label>
+    <input id="groupInput" type="text" placeholder="مثال: A أو 101" required>
+    <label>اليوم</label>
+    <select id="daySelect" required>
       <option value="الاثنين">الاثنين</option>
       <option value="الثلاثاء">الثلاثاء</option>
       <option value="الأربعاء">الأربعاء</option>
       <option value="الخميس">الخميس</option>
       <option value="الجمعة">الجمعة</option>
     </select>
-    <button id="printBtn" class="btn">🖨️ طباعة</button>
-  </div>
+    <label>الوقت</label>
+    <input id="timeInput" type="time" required>
+    <button type="submit" class="btn">✅ حفظ الحصة</button>
+  </form>
 </div>
 
-<!-- جدول الحضور -->
+<!-- فلاتر البحث والطباعة -->
+<div class="card filters">
+  <label>فلتر المادة</label>
+  <select id="filterSubject">
+    <option value="">الكل</option>
+  </select>
+  <label>فلتر الأستاذ</label>
+  <select id="filterTeacher">
+    <option value="">الكل</option>
+  </select>
+  <label>فلتر المجموعة</label>
+  <input id="filterGroup" type="text" placeholder="اسم الكروب">
+  <label>فلتر اليوم</label>
+  <select id="filterDay">
+    <option value="">الكل</option>
+    <option value="الاثنين">الاثنين</option>
+    <option value="الثلاثاء">الثلاثاء</option>
+    <option value="الأربعاء">الأربعاء</option>
+    <option value="الخميس">الخميس</option>
+    <option value="الجمعة">الجمعة</option>
+  </select>
+  <button class="btn" id="printBtn">🖨️ طباعة</button>
+</div>
+
+<!-- جدول الحصص -->
 <div class="card">
-  <strong>قائمة الحضور</strong>
-  <table id="attendanceTable">
+  <strong>قائمة الحصص</strong>
+  <table id="classesTable">
     <thead>
       <tr>
         <th>المادة</th>
@@ -57,22 +87,18 @@ th{background:#004aad;color:#fff;}
         <th>المجموعة</th>
         <th>اليوم</th>
         <th>الوقت</th>
-        <th>الطالب</th>
-        <th>الحضور</th>
+        <th>خيارات</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
 </div>
 
-</div>
-
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, getDocs, doc, updateDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getFirestore, collection, addDoc, getDocs, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-// إعداد Firebase
 const firebaseConfig = {
   apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
   authDomain: "oma2-d36fa.firebaseapp.com",
@@ -86,98 +112,141 @@ const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-onAuthStateChanged(auth,user=>{
-  if(!user){ window.location.href="login.html"; }
-  else{ document.body.style.visibility="visible"; loadFilters(); loadAttendance(); }
+const classForm = document.getElementById("classForm");
+const subjectSelect = document.getElementById("subjectSelect");
+const teacherSelect = document.getElementById("teacherSelect");
+const classesTableBody = document.querySelector("#classesTable tbody");
+
+const filterSubject = document.getElementById("filterSubject");
+const filterTeacher = document.getElementById("filterTeacher");
+const filterGroup = document.getElementById("filterGroup");
+const filterDay = document.getElementById("filterDay");
+const printBtn = document.getElementById("printBtn");
+
+let classesData = [];
+let subjectsMap = new Map();
+let teachersMap = new Map();
+
+// تحقق تسجيل الدخول بدون مشاكل الخروج
+onAuthStateChanged(auth, async(user)=>{
+  if(!user){
+    window.location.href="login.html";
+    return;
+  }
+  document.body.style.visibility = "visible";
+  await loadSubjectsAndTeachers();
+  loadClasses();
 });
 
-const filterSubject=document.getElementById("filterSubject");
-const filterTeacher=document.getElementById("filterTeacher");
-const filterGroup=document.getElementById("filterGroup");
-const filterDay=document.getElementById("filterDay");
-const printBtn=document.getElementById("printBtn");
-const attendanceTable=document.querySelector("#attendanceTable tbody");
-
-// تحميل بيانات الفلاتر
-async function loadFilters(){
-  const subjectsSet=new Set();
-  const teachersSnap=await getDocs(collection(db,"teachers"));
-  filterTeacher.innerHTML="<option value=''>اختر الأستاذ</option>";
-  teachersSnap.forEach(tSnap=>{
-    const t=tSnap.data();
-    filterTeacher.innerHTML+=`<option value="${tSnap.id}">${t.name}</option>`;
-    t.subjects.forEach(s=>subjectsSet.add(s.name));
+// تحميل المواد والأساتذة
+async function loadSubjectsAndTeachers(){
+  // المواد من الطلاب
+  const studentsSnap = await getDocs(collection(db,"students"));
+  const subjectsSet = new Set();
+  studentsSnap.forEach(snap=>{
+    snap.data().subjects.forEach(sub=>subjectsSet.add(sub.name));
   });
-  filterSubject.innerHTML="<option value=''>اختر المادة</option>";
-  subjectsSet.forEach(s=>filterSubject.innerHTML+=`<option value="${s}">${s}</option>`);
-}
-
-// تحميل الحضور
-async function loadAttendance(){
-  const snapshot=await getDocs(collection(db,"classes"));
-  attendanceTable.innerHTML="";
-  snapshot.forEach(clsSnap=>{
-    const cls={...clsSnap.data(),id:clsSnap.id};
-    cls.students.forEach(st=>{
-      const tr=document.createElement("tr");
-      tr.dataset.subject=cls.subjectId;
-      tr.dataset.teacher=cls.teacherId;
-      tr.dataset.group=cls.group;
-      tr.dataset.day=cls.day;
-      tr.innerHTML=`
-        <td>${cls.subjectId}</td>
-        <td>${cls.teacherId}</td>
-        <td>${cls.group}</td>
-        <td>${cls.day}</td>
-        <td>${cls.time}</td>
-        <td>${st.name}</td>
-        <td>
-          <select data-class="${cls.id}" data-student="${st.id}" class="attendanceSelect">
-            <option value="حاضر" ${cls.attendance.find(a=>a.studentId===st.id)?.status==="حاضر"?"selected":""}>حاضر</option>
-            <option value="غائب" ${cls.attendance.find(a=>a.studentId===st.id)?.status==="غائب"?"selected":""}>غائب</option>
-          </select>
-        </td>
-      `;
-      attendanceTable.appendChild(tr);
-    });
+  subjectSelect.innerHTML="<option value=''>اختر المادة</option>";
+  filterSubject.innerHTML="<option value=''>الكل</option>";
+  subjectsSet.forEach(sub=>{
+    subjectSelect.innerHTML+=`<option value="${sub}">${sub}</option>`;
+    filterSubject.innerHTML+=`<option value="${sub}">${sub}</option>`;
+    subjectsMap.set(sub,sub);
   });
 
-  document.querySelectorAll(".attendanceSelect").forEach(sel=>{
-    sel.addEventListener("change",async(e)=>{
-      const clsId=e.target.dataset.class;
-      const stId=e.target.dataset.student;
-      const clsRef=doc(db,"classes",clsId);
-      const clsDoc=await getDocs(collection(db,"classes"));
-      // تحديث الحضور في قاعدة البيانات
-      const clsSnap=await getDocs(collection(db,"classes"));
-      // استخدم طريقة مناسبة لحفظ الحالة
-      const attendanceRef=clsRef;
-      const clsData=(await clsRef.get()).data?.() || {};
-      let attendanceArr=clsData.attendance || [];
-      const idx=attendanceArr.findIndex(a=>a.studentId===stId);
-      if(idx>=0){ attendanceArr[idx].status=e.target.value; }
-      else{ attendanceArr.push({studentId:stId,status:e.target.value}); }
-      await updateDoc(clsRef,{attendance:attendanceArr});
-    });
+  // الأساتذة
+  const teachersSnap = await getDocs(collection(db,"teachers"));
+  teacherSelect.innerHTML="<option value=''>اختر الأستاذ</option>";
+  filterTeacher.innerHTML="<option value=''>الكل</option>";
+  teachersSnap.forEach(snap=>{
+    const t = snap.data();
+    teacherSelect.innerHTML+=`<option value="${snap.id}">${t.name}</option>`;
+    filterTeacher.innerHTML+=`<option value="${snap.id}">${t.name}</option>`;
+    teachersMap.set(snap.id,t.name);
   });
 }
 
-// تطبيق الفلاتر
+// حفظ الحصة
+classForm.addEventListener("submit", async(e)=>{
+  e.preventDefault();
+  const subject = subjectSelect.value;
+  const teacherId = teacherSelect.value;
+  const group = document.getElementById("groupInput").value.trim();
+  const day = document.getElementById("daySelect").value;
+  const time = document.getElementById("timeInput").value;
+
+  // جلب الطلاب من نفس الكروب
+  const studentsSnap = await getDocs(collection(db,"students"));
+  const groupStudents = [];
+  studentsSnap.forEach(snap=>{
+    const s = snap.data();
+    if(s.group===group){
+      groupStudents.push({id:snap.id,name:s.name});
+    }
+  });
+
+  await addDoc(collection(db,"classes"),{subject,teacherId,group,day,time,students:groupStudents,attendance:[]});
+  alert("تم حفظ الحصة بنجاح");
+  classForm.reset();
+  loadClasses();
+});
+
+// تحميل الحصص
+async function loadClasses(){
+  const snapshot = await getDocs(collection(db,"classes"));
+  classesData = [];
+  classesTableBody.innerHTML="";
+  snapshot.forEach(docSnap=>{
+    const cls = {...docSnap.data(),id:docSnap.id};
+    classesData.push(cls);
+  });
+  renderClassesTable();
+}
+
+// عرض الجدول مع الفلاتر
+function renderClassesTable(){
+  classesTableBody.innerHTML="";
+  const fSubject = filterSubject.value;
+  const fTeacher = filterTeacher.value;
+  const fGroup = filterGroup.value.trim();
+  const fDay = filterDay.value;
+
+  classesData.forEach(cls=>{
+    if(fSubject && cls.subject!==fSubject) return;
+    if(fTeacher && cls.teacherId!==fTeacher) return;
+    if(fGroup && cls.group!==fGroup) return;
+    if(fDay && cls.day!==fDay) return;
+
+    const tr = document.createElement("tr");
+    tr.innerHTML=`
+      <td>${cls.subject}</td>
+      <td>${teachersMap.get(cls.teacherId)||''}</td>
+      <td>${cls.group}</td>
+      <td>${cls.day}</td>
+      <td>${cls.time}</td>
+      <td><button class="btn warn" onclick="deleteClass('${cls.id}')">🗑️ حذف</button></td>
+    `;
+    classesTableBody.appendChild(tr);
+  });
+}
+
+// حذف حصة
+window.deleteClass = async(id)=>{
+  if(confirm("هل تريد حذف الحصة؟")){
+    await deleteDoc(doc(db,"classes",id));
+    loadClasses();
+  }
+}
+
+// فلاتر البحث
 [filterSubject,filterTeacher,filterGroup,filterDay].forEach(el=>{
-  el.addEventListener("change",applyFilters);
+  el.addEventListener("input", renderClassesTable);
 });
-function applyFilters(){
-  const s=filterSubject.value, t=filterTeacher.value, g=filterGroup.value.trim(), d=filterDay.value;
-  document.querySelectorAll("#attendanceTable tbody tr").forEach(tr=>{
-    tr.style.display=( (s&&tr.dataset.subject!==s) ||
-                     (t&&tr.dataset.teacher!==t) ||
-                     (g&&tr.dataset.group!==g) ||
-                     (d&&tr.dataset.day!==d) ) ? "none":"table-row";
-  });
-}
 
-// طباعة
-printBtn.addEventListener("click",()=>{window.print();});
+// زر الطباعة
+printBtn.addEventListener("click",()=>{
+  window.print();
+});
 </script>
 </body>
 </html>
